8180825: Javafx WebView fails to render pdf.js

Reviewed-by: kcr, ghb, mbilla